ceammc/ext/src/lib/lex/parser_clone.cpp

#line 1 "lex/parser_clone.rl"
# include "parser_clone.h"
# include <cstring>

namespace ceammc {
namespace parser {

static inline void set_args(TargetMessage& res, TargetType type, int16_t first, int16_t last, int16_t step, int8_t inlet) {
    res.first = first;
    res.last = last;
    res.step = step;
    res.target = type;
    res.inlet = inlet;
}


#line 19 "lex/parser_clone.cpp"
static const int clone_target_start = 1;
static const int clone_target_first_final = 21;
static const int clone_target_error = 0;

static const int clone_target_en_main = 1;


#line 51 "lex/parser_clone.rl"


bool parse_clone_target(const char* str, TargetMessage& res)
{
    const auto len = strlen(str);
    if (len == 0) {
        res.target = TARGET_TYPE_NONE;
        return false;
    }

    int cs = 0;
    const char* p = str;
    const char* pe = p + len;
    const char* eof = pe;

    int16_t id = 0, id0 = 1, id1 = -1, step = 1, inlet = -1;

    
#line 46 "lex/parser_clone.cpp"
	{
	cs = clone_target_start;
	}

#line 69 "lex/parser_clone.rl"
    
#line 53 "lex/parser_clone.cpp"
	{
	if ( p == pe )
		goto _test_eof;
	switch ( cs )
	{
case 1:
	if ( (*p) == 35 )
		goto st2;
	goto st0;
st0:
cs = 0;
	goto _out;
st2:
	if ( ++p == pe )
		goto _test_eof2;
case 2:
	switch( (*p) ) {
		case 33: goto st3;
		case 42: goto tr3;
		case 48: goto tr4;
		case 60: goto st11;
		case 61: goto st15;
		case 62: goto st16;
		case 63: goto tr9;
	}
	if ( 49 <= (*p) && (*p) <= 57 )
		goto tr5;
	goto st0;
st3:
	if ( ++p == pe )
		goto _test_eof3;
case 3:
	if ( (*p) == 48 )
		goto tr10;
	if ( 49 <= (*p) && (*p) <= 57 )
		goto tr11;
	goto st0;
tr10:
#line 18 "lex/parser_clone.rl"
	{ id = 0; }
#line 29 "lex/parser_clone.rl"
	{ set_args(res, TARGET_TYPE_EXCEPT, id, -1, 1,     inlet); }
	goto st21;
tr53:
#line 19 "lex/parser_clone.rl"
	{ id = 10*id+((*p)-'0'); }
#line 29 "lex/parser_clone.rl"
	{ set_args(res, TARGET_TYPE_EXCEPT, id, -1, 1,     inlet); }
	goto st21;
st21:
	if ( ++p == pe )
		goto _test_eof21;
case 21:
#line 107 "lex/parser_clone.cpp"
	if ( (*p) == 124 )
		goto st4;
	goto st0;
st4:
	if ( ++p == pe )
		goto _test_eof4;
case 4:
	if ( (*p) == 48 )
		goto tr12;
	if ( 49 <= (*p) && (*p) <= 57 )
		goto tr13;
	goto st0;
tr12:
#line 24 "lex/parser_clone.rl"
	{ inlet = 0; }
#line 29 "lex/parser_clone.rl"
	{ set_args(res, TARGET_TYPE_EXCEPT, id, -1, 1,     inlet); }
	goto st22;
tr14:
#line 24 "lex/parser_clone.rl"
	{ inlet = 0; }
#line 27 "lex/parser_clone.rl"
	{ set_args(res, TARGET_TYPE_ALL,    -1, -1, 1,     inlet); }
	goto st22;
tr20:
#line 24 "lex/parser_clone.rl"
	{ inlet = 0; }
#line 36 "lex/parser_clone.rl"
	{ set_args(res, TARGET_TYPE_RANGE, id0, id1, step, inlet); }
	goto st22;
tr22:
#line 24 "lex/parser_clone.rl"
	{ inlet = 0; }
#line 30 "lex/parser_clone.rl"
	{ set_args(res, TARGET_TYPE_EQ,     id, -1, 1,     inlet); }
	goto st22;
tr27:
#line 24 "lex/parser_clone.rl"
	{ inlet = 0; }
#line 33 "lex/parser_clone.rl"
	{ set_args(res, TARGET_TYPE_LT,     id, -1, 1,     inlet); }
	goto st22;
tr31:
#line 24 "lex/parser_clone.rl"
	{ inlet = 0; }
#line 34 "lex/parser_clone.rl"
	{ set_args(res, TARGET_TYPE_LE,     id, -1, 1,     inlet); }
	goto st22;
tr38:
#line 24 "lex/parser_clone.rl"
	{ inlet = 0; }
#line 31 "lex/parser_clone.rl"
	{ set_args(res, TARGET_TYPE_GT,     id, -1, 1,     inlet); }
	goto st22;
tr42:
#line 24 "lex/parser_clone.rl"
	{ inlet = 0; }
#line 32 "lex/parser_clone.rl"
	{ set_args(res, TARGET_TYPE_GE,     id, -1, 1,     inlet); }
	goto st22;
tr44:
#line 24 "lex/parser_clone.rl"
	{ inlet = 0; }
#line 28 "lex/parser_clone.rl"
	{ set_args(res, TARGET_TYPE_RANDOM, -1, -1, 1,     inlet); }
	goto st22;
tr49:
#line 25 "lex/parser_clone.rl"
	{ inlet = 10*inlet+((*p)-'0'); }
#line 29 "lex/parser_clone.rl"
	{ set_args(res, TARGET_TYPE_EXCEPT, id, -1, 1,     inlet); }
	goto st22;
tr57:
#line 25 "lex/parser_clone.rl"
	{ inlet = 10*inlet+((*p)-'0'); }
#line 27 "lex/parser_clone.rl"
	{ set_args(res, TARGET_TYPE_ALL,    -1, -1, 1,     inlet); }
	goto st22;
tr68:
#line 25 "lex/parser_clone.rl"
	{ inlet = 10*inlet+((*p)-'0'); }
#line 36 "lex/parser_clone.rl"
	{ set_args(res, TARGET_TYPE_RANGE, id0, id1, step, inlet); }
	goto st22;
tr75:
#line 25 "lex/parser_clone.rl"
	{ inlet = 10*inlet+((*p)-'0'); }
#line 30 "lex/parser_clone.rl"
	{ set_args(res, TARGET_TYPE_EQ,     id, -1, 1,     inlet); }
	goto st22;
tr83:
#line 25 "lex/parser_clone.rl"
	{ inlet = 10*inlet+((*p)-'0'); }
#line 33 "lex/parser_clone.rl"
	{ set_args(res, TARGET_TYPE_LT,     id, -1, 1,     inlet); }
	goto st22;
tr91:
#line 25 "lex/parser_clone.rl"
	{ inlet = 10*inlet+((*p)-'0'); }
#line 34 "lex/parser_clone.rl"
	{ set_args(res, TARGET_TYPE_LE,     id, -1, 1,     inlet); }
	goto st22;
tr103:
#line 25 "lex/parser_clone.rl"
	{ inlet = 10*inlet+((*p)-'0'); }
#line 31 "lex/parser_clone.rl"
	{ set_args(res, TARGET_TYPE_GT,     id, -1, 1,     inlet); }
	goto st22;
tr111:
#line 25 "lex/parser_clone.rl"
	{ inlet = 10*inlet+((*p)-'0'); }
#line 32 "lex/parser_clone.rl"
	{ set_args(res, TARGET_TYPE_GE,     id, -1, 1,     inlet); }
	goto st22;
tr119:
#line 25 "lex/parser_clone.rl"
	{ inlet = 10*inlet+((*p)-'0'); }
#line 28 "lex/parser_clone.rl"
	{ set_args(res, TARGET_TYPE_RANDOM, -1, -1, 1,     inlet); }
	goto st22;
st22:
	if ( ++p == pe )
		goto _test_eof22;
case 22:
#line 232 "lex/parser_clone.cpp"
	goto st0;
tr13:
#line 25 "lex/parser_clone.rl"
	{ inlet = (*p)-'0'; }
#line 29 "lex/parser_clone.rl"
	{ set_args(res, TARGET_TYPE_EXCEPT, id, -1, 1,     inlet); }
	goto st23;
st23:
	if ( ++p == pe )
		goto _test_eof23;
case 23:
#line 244 "lex/parser_clone.cpp"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr47;
	goto st0;
tr47:
#line 25 "lex/parser_clone.rl"
	{ inlet = 10*inlet+((*p)-'0'); }
#line 29 "lex/parser_clone.rl"
	{ set_args(res, TARGET_TYPE_EXCEPT, id, -1, 1,     inlet); }
	goto st24;
st24:
	if ( ++p == pe )
		goto _test_eof24;
case 24:
#line 258 "lex/parser_clone.cpp"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr48;
	goto st0;
tr48:
#line 25 "lex/parser_clone.rl"
	{ inlet = 10*inlet+((*p)-'0'); }
#line 29 "lex/parser_clone.rl"
	{ set_args(res, TARGET_TYPE_EXCEPT, id, -1, 1,     inlet); }
	goto st25;
st25:
	if ( ++p == pe )
		goto _test_eof25;
case 25:
#line 272 "lex/parser_clone.cpp"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr49;
	goto st0;
tr11:
#line 19 "lex/parser_clone.rl"
	{ id = (*p)-'0'; }
#line 29 "lex/parser_clone.rl"
	{ set_args(res, TARGET_TYPE_EXCEPT, id, -1, 1,     inlet); }
	goto st26;
st26:
	if ( ++p == pe )
		goto _test_eof26;
case 26:
#line 286 "lex/parser_clone.cpp"
	if ( (*p) == 124 )
		goto st4;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr50;
	goto st0;
tr50:
#line 19 "lex/parser_clone.rl"
	{ id = 10*id+((*p)-'0'); }
#line 29 "lex/parser_clone.rl"
	{ set_args(res, TARGET_TYPE_EXCEPT, id, -1, 1,     inlet); }
	goto st27;
st27:
	if ( ++p == pe )
		goto _test_eof27;
case 27:
#line 302 "lex/parser_clone.cpp"
	if ( (*p) == 124 )
		goto st4;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr51;
	goto st0;
tr51:
#line 19 "lex/parser_clone.rl"
	{ id = 10*id+((*p)-'0'); }
#line 29 "lex/parser_clone.rl"
	{ set_args(res, TARGET_TYPE_EXCEPT, id, -1, 1,     inlet); }
	goto st28;
st28:
	if ( ++p == pe )
		goto _test_eof28;
case 28:
#line 318 "lex/parser_clone.cpp"
	if ( (*p) == 124 )
		goto st4;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr52;
	goto st0;
tr52:
#line 19 "lex/parser_clone.rl"
	{ id = 10*id+((*p)-'0'); }
#line 29 "lex/parser_clone.rl"
	{ set_args(res, TARGET_TYPE_EXCEPT, id, -1, 1,     inlet); }
	goto st29;
st29:
	if ( ++p == pe )
		goto _test_eof29;
case 29:
#line 334 "lex/parser_clone.cpp"
	if ( (*p) == 124 )
		goto st4;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr53;
	goto st0;
tr3:
#line 27 "lex/parser_clone.rl"
	{ set_args(res, TARGET_TYPE_ALL,    -1, -1, 1,     inlet); }
	goto st30;
st30:
	if ( ++p == pe )
		goto _test_eof30;
case 30:
#line 348 "lex/parser_clone.cpp"
	if ( (*p) == 124 )
		goto st5;
	goto st0;
st5:
	if ( ++p == pe )
		goto _test_eof5;
case 5:
	if ( (*p) == 48 )
		goto tr14;
	if ( 49 <= (*p) && (*p) <= 57 )
		goto tr15;
	goto st0;
tr15:
#line 25 "lex/parser_clone.rl"
	{ inlet = (*p)-'0'; }
#line 27 "lex/parser_clone.rl"
	{ set_args(res, TARGET_TYPE_ALL,    -1, -1, 1,     inlet); }
	goto st31;
st31:
	if ( ++p == pe )
		goto _test_eof31;
case 31:
#line 371 "lex/parser_clone.cpp"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr55;
	goto st0;
tr55:
#line 25 "lex/parser_clone.rl"
	{ inlet = 10*inlet+((*p)-'0'); }
#line 27 "lex/parser_clone.rl"
	{ set_args(res, TARGET_TYPE_ALL,    -1, -1, 1,     inlet); }
	goto st32;
st32:
	if ( ++p == pe )
		goto _test_eof32;
case 32:
#line 385 "lex/parser_clone.cpp"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr56;
	goto st0;
tr56:
#line 25 "lex/parser_clone.rl"
	{ inlet = 10*inlet+((*p)-'0'); }
#line 27 "lex/parser_clone.rl"
	{ set_args(res, TARGET_TYPE_ALL,    -1, -1, 1,     inlet); }
	goto st33;
st33:
	if ( ++p == pe )
		goto _test_eof33;
case 33:
#line 399 "lex/parser_clone.cpp"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr57;
	goto st0;
tr4:
#line 18 "lex/parser_clone.rl"
	{ id = 0; }
#line 30 "lex/parser_clone.rl"
	{ set_args(res, TARGET_TYPE_EQ,     id, -1, 1,     inlet); }
#line 20 "lex/parser_clone.rl"
	{ id0 = id; }
	goto st34;
tr79:
#line 19 "lex/parser_clone.rl"
	{ id = 10*id+((*p)-'0'); }
#line 30 "lex/parser_clone.rl"
	{ set_args(res, TARGET_TYPE_EQ,     id, -1, 1,     inlet); }
#line 20 "lex/parser_clone.rl"
	{ id0 = id; }
	goto st34;
st34:
	if ( ++p == pe )
		goto _test_eof34;
case 34:
#line 423 "lex/parser_clone.cpp"
	switch( (*p) ) {
		case 46: goto st6;
		case 124: goto st10;
	}
	goto st0;
st6:
	if ( ++p == pe )
		goto _test_eof6;
case 6:
	if ( (*p) == 46 )
		goto st7;
	goto st0;
st7:
	if ( ++p == pe )
		goto _test_eof7;
case 7:
	if ( (*p) == 48 )
		goto tr17;
	if ( 49 <= (*p) && (*p) <= 57 )
		goto tr18;
	goto st0;
tr17:
#line 18 "lex/parser_clone.rl"
	{ id = 0; }
#line 21 "lex/parser_clone.rl"
	{ id1 = id; }
#line 36 "lex/parser_clone.rl"
	{ set_args(res, TARGET_TYPE_RANGE, id0, id1, step, inlet); }
	goto st35;
tr72:
#line 19 "lex/parser_clone.rl"
	{ id = 10*id+((*p)-'0'); }
#line 21 "lex/parser_clone.rl"
	{ id1 = id; }
#line 36 "lex/parser_clone.rl"
	{ set_args(res, TARGET_TYPE_RANGE, id0, id1, step, inlet); }
	goto st35;
st35:
	if ( ++p == pe )
		goto _test_eof35;
case 35:
#line 465 "lex/parser_clone.cpp"
	switch( (*p) ) {
		case 58: goto st8;
		case 124: goto st9;
	}
	goto st0;
st8:
	if ( ++p == pe )
		goto _test_eof8;
case 8:
	if ( 49 <= (*p) && (*p) <= 57 )
		goto tr19;
	goto st0;
tr19:
#line 22 "lex/parser_clone.rl"
	{ step = (*p)-'0'; }
#line 36 "lex/parser_clone.rl"
	{ set_args(res, TARGET_TYPE_RANGE, id0, id1, step, inlet); }
	goto st36;
st36:
	if ( ++p == pe )
		goto _test_eof36;
case 36:
#line 488 "lex/parser_clone.cpp"
	if ( (*p) == 124 )
		goto st9;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr62;
	goto st0;
tr62:
#line 22 "lex/parser_clone.rl"
	{ step = 10*step+((*p)-'0'); }
#line 36 "lex/parser_clone.rl"
	{ set_args(res, TARGET_TYPE_RANGE, id0, id1, step, inlet); }
	goto st37;
st37:
	if ( ++p == pe )
		goto _test_eof37;
case 37:
#line 504 "lex/parser_clone.cpp"
	if ( (*p) == 124 )
		goto st9;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr63;
	goto st0;
tr63:
#line 22 "lex/parser_clone.rl"
	{ step = 10*step+((*p)-'0'); }
#line 36 "lex/parser_clone.rl"
	{ set_args(res, TARGET_TYPE_RANGE, id0, id1, step, inlet); }
	goto st38;
st38:
	if ( ++p == pe )
		goto _test_eof38;
case 38:
#line 520 "lex/parser_clone.cpp"
	if ( (*p) == 124 )
		goto st9;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr64;
	goto st0;
tr64:
#line 22 "lex/parser_clone.rl"
	{ step = 10*step+((*p)-'0'); }
#line 36 "lex/parser_clone.rl"
	{ set_args(res, TARGET_TYPE_RANGE, id0, id1, step, inlet); }
	goto st39;
st39:
	if ( ++p == pe )
		goto _test_eof39;
case 39:
#line 536 "lex/parser_clone.cpp"
	if ( (*p) == 124 )
		goto st9;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr65;
	goto st0;
tr65:
#line 22 "lex/parser_clone.rl"
	{ step = 10*step+((*p)-'0'); }
#line 36 "lex/parser_clone.rl"
	{ set_args(res, TARGET_TYPE_RANGE, id0, id1, step, inlet); }
	goto st40;
st40:
	if ( ++p == pe )
		goto _test_eof40;
case 40:
#line 552 "lex/parser_clone.cpp"
	if ( (*p) == 124 )
		goto st9;
	goto st0;
st9:
	if ( ++p == pe )
		goto _test_eof9;
case 9:
	if ( (*p) == 48 )
		goto tr20;
	if ( 49 <= (*p) && (*p) <= 57 )
		goto tr21;
	goto st0;
tr21:
#line 25 "lex/parser_clone.rl"
	{ inlet = (*p)-'0'; }
#line 36 "lex/parser_clone.rl"
	{ set_args(res, TARGET_TYPE_RANGE, id0, id1, step, inlet); }
	goto st41;
st41:
	if ( ++p == pe )
		goto _test_eof41;
case 41:
#line 575 "lex/parser_clone.cpp"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr66;
	goto st0;
tr66:
#line 25 "lex/parser_clone.rl"
	{ inlet = 10*inlet+((*p)-'0'); }
#line 36 "lex/parser_clone.rl"
	{ set_args(res, TARGET_TYPE_RANGE, id0, id1, step, inlet); }
	goto st42;
st42:
	if ( ++p == pe )
		goto _test_eof42;
case 42:
#line 589 "lex/parser_clone.cpp"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr67;
	goto st0;
tr67:
#line 25 "lex/parser_clone.rl"
	{ inlet = 10*inlet+((*p)-'0'); }
#line 36 "lex/parser_clone.rl"
	{ set_args(res, TARGET_TYPE_RANGE, id0, id1, step, inlet); }
	goto st43;
st43:
	if ( ++p == pe )
		goto _test_eof43;
case 43:
#line 603 "lex/parser_clone.cpp"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr68;
	goto st0;
tr18:
#line 19 "lex/parser_clone.rl"
	{ id = (*p)-'0'; }
#line 21 "lex/parser_clone.rl"
	{ id1 = id; }
#line 36 "lex/parser_clone.rl"
	{ set_args(res, TARGET_TYPE_RANGE, id0, id1, step, inlet); }
	goto st44;
st44:
	if ( ++p == pe )
		goto _test_eof44;
case 44:
#line 619 "lex/parser_clone.cpp"
	switch( (*p) ) {
		case 58: goto st8;
		case 124: goto st9;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr69;
	goto st0;
tr69:
#line 19 "lex/parser_clone.rl"
	{ id = 10*id+((*p)-'0'); }
#line 21 "lex/parser_clone.rl"
	{ id1 = id; }
#line 36 "lex/parser_clone.rl"
	{ set_args(res, TARGET_TYPE_RANGE, id0, id1, step, inlet); }
	goto st45;
st45:
	if ( ++p == pe )
		goto _test_eof45;
case 45:
#line 639 "lex/parser_clone.cpp"
	switch( (*p) ) {
		case 58: goto st8;
		case 124: goto st9;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr70;
	goto st0;
tr70:
#line 19 "lex/parser_clone.rl"
	{ id = 10*id+((*p)-'0'); }
#line 21 "lex/parser_clone.rl"
	{ id1 = id; }
#line 36 "lex/parser_clone.rl"
	{ set_args(res, TARGET_TYPE_RANGE, id0, id1, step, inlet); }
	goto st46;
st46:
	if ( ++p == pe )
		goto _test_eof46;
case 46:
#line 659 "lex/parser_clone.cpp"
	switch( (*p) ) {
		case 58: goto st8;
		case 124: goto st9;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr71;
	goto st0;
tr71:
#line 19 "lex/parser_clone.rl"
	{ id = 10*id+((*p)-'0'); }
#line 21 "lex/parser_clone.rl"
	{ id1 = id; }
#line 36 "lex/parser_clone.rl"
	{ set_args(res, TARGET_TYPE_RANGE, id0, id1, step, inlet); }
	goto st47;
st47:
	if ( ++p == pe )
		goto _test_eof47;
case 47:
#line 679 "lex/parser_clone.cpp"
	switch( (*p) ) {
		case 58: goto st8;
		case 124: goto st9;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr72;
	goto st0;
st10:
	if ( ++p == pe )
		goto _test_eof10;
case 10:
	if ( (*p) == 48 )
		goto tr22;
	if ( 49 <= (*p) && (*p) <= 57 )
		goto tr23;
	goto st0;
tr23:
#line 25 "lex/parser_clone.rl"
	{ inlet = (*p)-'0'; }
#line 30 "lex/parser_clone.rl"
	{ set_args(res, TARGET_TYPE_EQ,     id, -1, 1,     inlet); }
	goto st48;
st48:
	if ( ++p == pe )
		goto _test_eof48;
case 48:
#line 706 "lex/parser_clone.cpp"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr73;
	goto st0;
tr73:
#line 25 "lex/parser_clone.rl"
	{ inlet = 10*inlet+((*p)-'0'); }
#line 30 "lex/parser_clone.rl"
	{ set_args(res, TARGET_TYPE_EQ,     id, -1, 1,     inlet); }
	goto st49;
st49:
	if ( ++p == pe )
		goto _test_eof49;
case 49:
#line 720 "lex/parser_clone.cpp"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr74;
	goto st0;
tr74:
#line 25 "lex/parser_clone.rl"
	{ inlet = 10*inlet+((*p)-'0'); }
#line 30 "lex/parser_clone.rl"
	{ set_args(res, TARGET_TYPE_EQ,     id, -1, 1,     inlet); }
	goto st50;
st50:
	if ( ++p == pe )
		goto _test_eof50;
case 50:
#line 734 "lex/parser_clone.cpp"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr75;
	goto st0;
tr5:
#line 19 "lex/parser_clone.rl"
	{ id = (*p)-'0'; }
#line 30 "lex/parser_clone.rl"
	{ set_args(res, TARGET_TYPE_EQ,     id, -1, 1,     inlet); }
#line 20 "lex/parser_clone.rl"
	{ id0 = id; }
	goto st51;
st51:
	if ( ++p == pe )
		goto _test_eof51;
case 51:
#line 750 "lex/parser_clone.cpp"
	switch( (*p) ) {
		case 46: goto st6;
		case 124: goto st10;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr76;
	goto st0;
tr76:
#line 19 "lex/parser_clone.rl"
	{ id = 10*id+((*p)-'0'); }
#line 30 "lex/parser_clone.rl"
	{ set_args(res, TARGET_TYPE_EQ,     id, -1, 1,     inlet); }
#line 20 "lex/parser_clone.rl"
	{ id0 = id; }
	goto st52;
st52:
	if ( ++p == pe )
		goto _test_eof52;
case 52:
#line 770 "lex/parser_clone.cpp"
	switch( (*p) ) {
		case 46: goto st6;
		case 124: goto st10;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr77;
	goto st0;
tr77:
#line 19 "lex/parser_clone.rl"
	{ id = 10*id+((*p)-'0'); }
#line 30 "lex/parser_clone.rl"
	{ set_args(res, TARGET_TYPE_EQ,     id, -1, 1,     inlet); }
#line 20 "lex/parser_clone.rl"
	{ id0 = id; }
	goto st53;
st53:
	if ( ++p == pe )
		goto _test_eof53;
case 53:
#line 790 "lex/parser_clone.cpp"
	switch( (*p) ) {
		case 46: goto st6;
		case 124: goto st10;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr78;
	goto st0;
tr78:
#line 19 "lex/parser_clone.rl"
	{ id = 10*id+((*p)-'0'); }
#line 30 "lex/parser_clone.rl"
	{ set_args(res, TARGET_TYPE_EQ,     id, -1, 1,     inlet); }
#line 20 "lex/parser_clone.rl"
	{ id0 = id; }
	goto st54;
st54:
	if ( ++p == pe )
		goto _test_eof54;
case 54:
#line 810 "lex/parser_clone.cpp"
	switch( (*p) ) {
		case 46: goto st6;
		case 124: goto st10;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr79;
	goto st0;
st11:
	if ( ++p == pe )
		goto _test_eof11;
case 11:
	switch( (*p) ) {
		case 48: goto tr24;
		case 61: goto st13;
	}
	if ( 49 <= (*p) && (*p) <= 57 )
		goto tr25;
	goto st0;
tr24:
#line 18 "lex/parser_clone.rl"
	{ id = 0; }
#line 33 "lex/parser_clone.rl"
	{ set_args(res, TARGET_TYPE_LT,     id, -1, 1,     inlet); }
	goto st55;
tr87:
#line 19 "lex/parser_clone.rl"
	{ id = 10*id+((*p)-'0'); }
#line 33 "lex/parser_clone.rl"
	{ set_args(res, TARGET_TYPE_LT,     id, -1, 1,     inlet); }
	goto st55;
st55:
	if ( ++p == pe )
		goto _test_eof55;
case 55:
#line 845 "lex/parser_clone.cpp"
	if ( (*p) == 124 )
		goto st12;
	goto st0;
st12:
	if ( ++p == pe )
		goto _test_eof12;
case 12:
	if ( (*p) == 48 )
		goto tr27;
	if ( 49 <= (*p) && (*p) <= 57 )
		goto tr28;
	goto st0;
tr28:
#line 25 "lex/parser_clone.rl"
	{ inlet = (*p)-'0'; }
#line 33 "lex/parser_clone.rl"
	{ set_args(res, TARGET_TYPE_LT,     id, -1, 1,     inlet); }
	goto st56;
st56:
	if ( ++p == pe )
		goto _test_eof56;
case 56:
#line 868 "lex/parser_clone.cpp"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr81;
	goto st0;
tr81:
#line 25 "lex/parser_clone.rl"
	{ inlet = 10*inlet+((*p)-'0'); }
#line 33 "lex/parser_clone.rl"
	{ set_args(res, TARGET_TYPE_LT,     id, -1, 1,     inlet); }
	goto st57;
st57:
	if ( ++p == pe )
		goto _test_eof57;
case 57:
#line 882 "lex/parser_clone.cpp"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr82;
	goto st0;
tr82:
#line 25 "lex/parser_clone.rl"
	{ inlet = 10*inlet+((*p)-'0'); }
#line 33 "lex/parser_clone.rl"
	{ set_args(res, TARGET_TYPE_LT,     id, -1, 1,     inlet); }
	goto st58;
st58:
	if ( ++p == pe )
		goto _test_eof58;
case 58:
#line 896 "lex/parser_clone.cpp"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr83;
	goto st0;
tr25:
#line 19 "lex/parser_clone.rl"
	{ id = (*p)-'0'; }
#line 33 "lex/parser_clone.rl"
	{ set_args(res, TARGET_TYPE_LT,     id, -1, 1,     inlet); }
	goto st59;
st59:
	if ( ++p == pe )
		goto _test_eof59;
case 59:
#line 910 "lex/parser_clone.cpp"
	if ( (*p) == 124 )
		goto st12;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr84;
	goto st0;
tr84:
#line 19 "lex/parser_clone.rl"
	{ id = 10*id+((*p)-'0'); }
#line 33 "lex/parser_clone.rl"
	{ set_args(res, TARGET_TYPE_LT,     id, -1, 1,     inlet); }
	goto st60;
st60:
	if ( ++p == pe )
		goto _test_eof60;
case 60:
#line 926 "lex/parser_clone.cpp"
	if ( (*p) == 124 )
		goto st12;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr85;
	goto st0;
tr85:
#line 19 "lex/parser_clone.rl"
	{ id = 10*id+((*p)-'0'); }
#line 33 "lex/parser_clone.rl"
	{ set_args(res, TARGET_TYPE_LT,     id, -1, 1,     inlet); }
	goto st61;
st61:
	if ( ++p == pe )
		goto _test_eof61;
case 61:
#line 942 "lex/parser_clone.cpp"
	if ( (*p) == 124 )
		goto st12;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr86;
	goto st0;
tr86:
#line 19 "lex/parser_clone.rl"
	{ id = 10*id+((*p)-'0'); }
#line 33 "lex/parser_clone.rl"
